add func: search teachers

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -10,6 +10,7 @@
         "student": "Student",
         "score": "Score",
         "meanScore": "Mean Score",
+        "teacher": "Teacher",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
