--- a/src/main/webapp/i18n/vi/meanScore.json
+++ b/src/main/webapp/i18n/vi/meanScore.json
@@ -22,6 +22,7 @@
       "diemtbtl10": "Diemtbtl 10",
       "diemtbtl4": "Diemtbtl 4",
       "sotinchidat": "Sotinchidat",
+      "sotinchitichluy": "Sotinchitichluy",
       "phanLoai": "Phan Loai",
       "type": "Type",
       "studentId": "Student Id"
