create link to footer

--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -17,6 +17,7 @@
     "github": "GitHub",
     "search": "Search",
     "searchStudentInformation": "Search Student Information",
-    "searchTeacherInformation": "Search Teacher Information"
+    "searchTeacherInformation": "Search Teacher Information",
+    "try": "try"
   }
 }
