--- a/src/main/webapp/i18n/vi/home.json
+++ b/src/main/webapp/i18n/vi/home.json
@@ -17,6 +17,7 @@
     "github": "GitHub",
     "search": "Tìm kiếm",
     "searchStudentInformation": "Tìm kiếm thông tin sinh viên",
-    "searchTeacherInformation": "Tìm kiếm thông tin giáo viên"
+    "searchTeacherInformation": "Tìm kiếm thông tin giáo viên",
+    "try": "Xem thử"
   }
 }
