--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -25,7 +25,7 @@
     "find_student_info": "Find Student Information",
     "find_teacher_info": "Find Teacher Information",
     "find_student_info_detail": "Find by name, address, class ...",
-    "find_score": "Find score",
+    "find_score": "Rank",
     "find_score_detail": "Best of VNUA"
   }
 }
