--- a/src/main/webapp/i18n/vi/home.json
+++ b/src/main/webapp/i18n/vi/home.json
@@ -25,7 +25,7 @@
     "find_student_info": "Tìm kiếm thông tin sinh viên",
     "find_teacher_info": "Tìm kiếm thông tin giáo viên",
     "find_student_info_detail": "Tìm theo tên, lớp, địa chỉ ...",
-    "find_score": "Xem điểm thi",
+    "find_score": "Xếp hạng",
     "find_score_detail": "Xem danh sách các bạn điểm cao nhất trường"
   }
 }
